--- a/Registro/Site.Master
+++ b/Registro/Site.Master
@@ -38,21 +38,25 @@
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <a class="navbar-brand" href="http://localhost:53949/Inicio.aspx"></a>
-        <a class="navbar-brand" href="Inicio.aspx">Inicio</a>
+        <a class="navbar-brand" runat="server" href="#">Menu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="Registro Usuario/Usuario.aspx">Registro Usuario</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="Consultar/ConsultarUsuario.aspx">Consultar Usuario</a>
+                    <a class="nav-link" runat="server" href="~/Default.aspx">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" runat="server" href="~/Registro Usuario/Usuario.aspx">Registro Usuario</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" runat="server"  href="~/Consultar/ConsultarUsuario.aspx">Consultar Usuario</a>
+                </li>
+                <li class="nav-item">
+                    <a runat="server" onserverclick="Unnamed_ServerClick" class="nav-link" href="#">Login out</a>
+                </li>
+
             </ul>
         </div>
     </nav>
